    - Driving assistant and cruise control (from Pavement Drive Assist Continued) no longer require technology to be researched.
    - Disabld smart roads (from Pavement Drive Assist Continued).
    - Enable toggle notifications for cruise control and driving assistant (from Pavement Drive Assist Continued). New version makes them slightly less annoying sound-wise.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-07-08
  Changes:
    - Cleanup range for Even Distribution mod has been limited to default character reach through map settings (make sure to reset the mod setting if necessary).
    - Auto-approvals for Construction Planner mod are now enabled when starting the game. It might be a bit less confusing for the player to start in vanilla-default state.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-07-07
  Features:
    - Blueprints
      - Change circuit signals, station names, filters, colors, and machine recipes in blueprints (via "Blueprint Cloner")
      - Convert blueprints into signals (using constant combinators) (via "Blueprint Signals (continued)")
      - Swap wires, set tiles, quick-grid or configure blueprint (via "Blueprint Tools")
    - Building
      - Reverse entire belt sections via control binding (via "Belt Reverser")
      - Force personal bots to build selected ghost entities (via "Bot Prioritizer")
      - Copy and paste modules alongside crafting machine recipe settings (via "Copy Paste Modules")
      - Transition to ghost in cursor while building, use pipette for tile selections, cycle between item tiers in cursor (via "Cursor Enhancements")
      - Use identical reach range for mining resources (trees/rocks/ores) by hand as for building (via "Far Reach")
      - Keep track of number of ghosts in an area during construction (via "Ghost Counter")