@@ -250,6 +250,10 @@ Features
 
     > Rotate vehicles like any other entity in the game. Helpful to get that initial bearing when driving in cardinal directions.
 
+-   Personal shuttle trains ([Shuttle Train Refresh](https://mods.factorio.com/mod/ShuttleTrainRefresh))
+
+    > Set-up trains and train stops network solely dedicated to your own personal transporation needs. Summon trains to a neraby personal station or rails, hop on board, and pick between personal stations. Minimum requirements: one train stop named *Main - Personal*, single locomotive with *Shuttle train module* in its grid (just don't confuse it with the manual one), and one or more stations that have the text *personal* somewhere in their name. Summon the shuttle using shortcuts or with *Middle mouse button* click. Send shuttle train back to depot with *Control + Middle mouse button*. **NOTE:** Since everyone has their own preferred naming schema for train stops, you may be interested in overriding the names that modpack sets for depot train stop and personal train stops.
+
 -   Enhanced control and use of spidertrons with better pathfinding and automated patrols ([Spidertron Enhancements](https://mods.factorio.com/mod/SpidertronEnhancements), [Spidertron Patrols](https://mods.factorio.com/mod/SpidertronPatrols))
 
     > Provides some enhancements when using spidertrons, such as being able to remotely open their inventories, get a temporary spidertron remote using pipette-like behaviour, recall last used spidertron (ordering it to follow the player), and use advanced pathfinding that makes the spidertron calculate path around water. Also introduces ability to set-up spidertron patrols, allowing you to spend less time moving spidertron back-and-forth to places where biters frequently damage railroad. **WARNING:** Many features of the two listed mods have been disabled by the modpack to preserve the feel of the base game. Remote access to spidertron inventory is currently a bit cheaty since it does not respect player reach for moving items into and out of spidertron's inventory. The requirement for additional technology that must be researched to use patrols is remnant of a possible bug in Spidertron Patrols mod (normally spiderlings get unlocked with it as well, but those are disabled for modpack purposes).
