@@ -106,6 +106,11 @@ local control_overrides = {
         { name = "toggle-constant-combinator-hotkey", key_sequence = "CONTROL + mouse-button-1", alternative_key_sequence = "" },
         { name = "open-constant-combinator-hotkey", key_sequence = "CONTROL + mouse-button-2", alternative_key_sequence = "" }
     },
+    ['ShuttleTrainRefresh'] = {
+        -- Shuttle trains are used often, it is useful to bind controls to something that is always readily available.
+        { name = "call-shuttle-train", key_sequence = "mouse-button-3", alternative_key_sequence = "" },
+        { name = "send-shuttle-train-to-depot", key_sequence = "CONTROL + mouse-button-3" }
+    },
     ['SpidertronEnhancements'] = {
         -- Ability to enter vehicles directly with spidertron has been disabled through modpack settings.
         { name = "spidertron-enhancements-enter-vehicles", key_sequence = "", alternative_key_sequence = "" },
