@@ -51,6 +51,7 @@
         "resourcehighlighter-dark >= 2.0.6",
         "rotate-vehicles >= 0.0.7",
         "Shortcuts-ick >= 1.1.27",
+        "ShuttleTrainRefresh >= 1.1.7",
         "SpidertronEnhancements >= 1.8.5",
         "SpidertronPatrols >= 2.2.5",
         "Squeak Through >= 1.8.2",
